<resources>
    <string name="app_name">Sprint1</string>

    <!-- String resources for Main page -->
    <string name="main_sign_in_btn">Sign In</string>
    <string name="main_sign_up_btn">Sign Up</string>
    <string name="main_quit_btn">Quit</string>

    <!-- String resources for Login page -->
    <string name="login_title">Log In</string>
    <string name="user_label">Enter Email</string>
    <string name="password_label">Enter Password</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="login_hint">Enter Email or Username</string>

    <!-- String resources for Signup Page -->
    <string name="signup_title">Sign Up</string>
    <string name="user_creation_label">Enter Email</string>
    <string name="password_creation_label">Enter Password</string>
    <string name="sign_in_text">Already have an account?</string>
    <string name="sign_up_hint">Enter Username (Optional)</string>

    <!-- Shared resources for Login/Signup Page -->
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- String resources for Logistics Page -->
    <string name="logistics_title">Logistics</string>
    <string name="allotted_vs_planned_btn">Allotted vs. Planned</string>
    <string name="contributor_title">Contributors: </string>
    <string name="invited_user_card">Invited User</string>
    <string name="notes_description">Add Notes</string>
    <string name="invite_description">Invite Button</string>

    <!-- String resources for Destinations Page -->
    <string name="destination_title">Destinations</string>
    <string name="log_travel_btn">Log Travel</string>
    <string name="log_travel_title">Log Travel</string>
    <string name="travel_location">Travel Location</string>
    <string name="travel_location_input">Enter Travel Location</string>
    <string name="start_date">Start Date</string>
    <string name="date_view">Select Date</string>
    <string name="end_date">End Date</string>
    <string name="log_travel_submit">Submit</string>
    <string name="vacation_time_title">Calculate Vacation Time</string>
    <string name="vacation_duration">Duration (in days): </string>
    <string name="vacation_duration_hint">Enter Duration (in days)</string>
    <string name="vacation_duration_button">Calculate</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- String resources for Accommodations Page -->
    <string name="accommodations_title">Accommodations Screen</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>