<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/signIn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="@string/main_sign_in_btn"
        android:textSize="23sp"
        android:fontFamily="@font/poppins_regular"
        app:backgroundTint="@color/modern_purple"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signUp"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/main_sign_up_btn"
        android:textSize="23sp"
        android:fontFamily="@font/poppins_regular"
        app:backgroundTint="@color/modern_blue"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_quit_btn"
        android:textSize="23sp"
        android:fontFamily="@font/poppins_regular"
        android:backgroundTint="@color/golden"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>