<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.sprint1.viewmodel.LogisticsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logistics_background"
        tools:context=".view.LogisticsActivity">

        <TextView
            android:id="@+id/logistics_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logistics_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold" />

        <Button
            android:id="@+id/add_trip"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:text="Create Trip"
            android:textSize="23sp"
            android:fontFamily="@font/poppins_regular"
            app:backgroundTint="@color/modern_blue"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:layout_constraintWidth_percent="0.78"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/logistics_title"
            app:layout_constraintBottom_toTopOf="@id/allotted_vs_planned"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/allotted_vs_planned"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/allotted_vs_planned_btn"
            android:textSize="23sp"
            android:fontFamily="@font/poppins_regular"
            app:backgroundTint="@color/modern_purple"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:layout_constraintWidth_percent="0.78"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/add_trip"
            app:layout_constraintBottom_toTopOf="@id/contributors"/>

        <TextView
            android:id="@+id/contributors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contributor_title"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allotted_vs_planned" />

        <!-- LinearLayout to hold dynamic invited user cards -->
        <LinearLayout
            android:id="@+id/invited_users_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/invited_user_card"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contributors" />

        <Button
            android:id="@+id/button_notes"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/modern_blue"
            android:drawableTop="@drawable/add_notes"
            android:contentDescription="@string/notes_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tab_navigation"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button_invite"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/modern_blue"
            android:drawableTop="@drawable/people_invite"
            android:contentDescription="@string/invite_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tab_navigation"
            app:cornerRadius="10dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:background="@color/cardview_dark_background"
            app:tabMode="fixed"
            app:tabIconTint="@color/tab_color"
            app:tabIndicatorColor="@color/tab_indicator"
            app:tabIndicatorHeight="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/logistics_title"
            app:layout_constraintBottom_toTopOf="@id/tab_navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>