<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.sprint1.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_up_background"
        tools:context=".view.Signup">

        <View
            android:id="@+id/rectangleCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rectangle_card"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textSize="40sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rectangleCard"
            app:layout_constraintBottom_toTopOf="@id/usernameLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/modern_blue"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:startIconDrawable="@drawable/user"
            app:startIconTint="@color/white"
            android:hint="@string/user_label"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/muted_red"
            app:errorTextAppearance="@style/ErrorTextStyle"
            app:errorTextColor="@color/muted_red"
            app:errorIconTint="@color/muted_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/passwordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/modern_purple"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            android:hint="@string/password_label"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/muted_red"
            app:errorTextAppearance="@style/ErrorTextStyle"
            app:errorTextColor="@color/muted_red"
            app:errorIconTint="@color/muted_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout"
            app:layout_constraintBottom_toTopOf="@id/signUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sign_up_button"
            android:textSize="23sp"
            android:fontFamily="@font/poppins_regular"
            app:backgroundTint="@color/modern_blue"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintBottom_toTopOf="@id/signInText" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in_text"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:fontFamily="@font/poppins_medium_italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUp"
            app:layout_constraintBottom_toTopOf="@id/signIn"/>

        <Button
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="-15dp"
            android:text="@string/sign_in_button"
            android:textSize="23sp"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/modern_purple"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/signInText"
            app:layout_constraintBottom_toBottomOf="@id/rectangleCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>